Test/Files/Parser/FullParserTestCases/FullTests/Out/testcase03_04.out
<Type> ::= int
<Expr> ::= Integer
<Expr> ::= Integer
<Expr> ::= Integer
<Expr> ::= <Expr> * <Expr>
<Expr> ::= <Expr> + <Expr>
<Stmt> ::= <Type> ID = <Expr> ;
<Expr> ::= true
<Expr> ::= ! <Expr>


Parse error on line 10:
...8 * 9;		if (!true) null else i = 2*(i);
----------------------^
Expecting '{', 'if', 'while', 'printLine', 'ID', 'int', 'boolean'